# designing-multi-agent-systems

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml  pyrightconfig.json  ruff.toml
chapt_0/: demo_picoagents.py
uv/hello-world/: pyproject.toml
uv/scripts/: example.py
