[project]
name = "designing-multi-agent-systems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "pip>=25.3",
    "pyright>=1.1.407",
    "requests>=2.32.5",
]


[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
